--- a/css/main.css
+++ b/css/main.css
@@ -536,19 +536,50 @@ body {
           box-shadow: 0px 0px 20px 10px yellow;
 }
 
-.hero__list {
+.hero__list-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hero__list {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 20px;
+  gap: 15px;
+  margin-right: 20px;
   margin: 0;
   padding-left: 0;
   list-style: none;
+}
+
+.hero__bookmark-wrap {
+  width: 33%;
+}
+
+.hero__bookmark-list {
+  height: auto;
+  margin: 0;
+  padding: 15px;
+  list-style: none;
+  border: 3px solid var(--main-border-color);
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0 10px 7px yellow;
+          box-shadow: 0px 0 10px 7px yellow;
+}
+
+.hero__bookmark-title {
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--main-border-color);
+  text-align: center;
 }
 
 .hero__item {
@@ -646,6 +677,58 @@ body {
   text-decoration: none;
   border: 2px solid var(--main-white-color);
   border-radius: 10px;
+}
+
+.hero__bookmark-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.hero__bookmark-item {
+  max-width: 270px;
+  width: 100%;
+  padding: 15px;
+  border: 3px solid var(--main-border-color);
+  border-radius: 9px;
+  -webkit-transition: -webkit-box-shadow 0.2s ease;
+  transition: -webkit-box-shadow 0.2s ease;
+  transition: box-shadow 0.2s ease;
+  transition: box-shadow 0.2s ease, -webkit-box-shadow 0.2s ease;
+}
+
+.hero__bookmark-img {
+  max-width: 220px;
+  width: 100%;
+  height: 120px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+.hero__bookmark-title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 20px;
+  line-height: 24px;
+  color: var(--main-white-color);
+}
+
+.modal-header {
+  background-color: bisque;
+}
+
+.modal-title {
+  font-size: 24px;
+  color: black;
+  font-weight: bold;
+  letter-spacing: 1.4px;
 }
 
 @media only screen and (min-width: 280px) {
